--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qrcode",
+  "name": "@andrewiski/qrcode",
   "description": "QRCode / 2d Barcode api with both server side and client side support using canvas",
   "version": "1.5.2",
   "author": "Ryan Day <soldair@gmail.com>",
